Fixed some alignment/media query issues

--- a/less/makies-homepage.less
+++ b/less/makies-homepage.less
@@ -4,6 +4,19 @@
 }
 
 
+@media (max-width: @screen-sm-max) {
+
+	.homepage-image {
+	background: url("images/homepage/jumbotron/homepage-image-3.png");
+	width: 750px;
+	height: 313px;
+	margin-left: auto;
+	margin-right: auto;
+	}
+}
+
+
+
 .homepage-image {
 	width: 750px;
 	height: 313px;
