--- a/less/makies-layout.less
+++ b/less/makies-layout.less
@@ -9,7 +9,7 @@
 	margin-top: 12px;
 }
 
-@media (max-width: @screen-lg-min) {
+@media (min-width: @screen-lg-min) {
 
 	.navbar-default .logo, .navbar-default .logo:hover {
 		background: url("/images/global/logo/logo-sm.png") no-repeat;
@@ -23,7 +23,7 @@
  }
 
 
-@media (max-width: @screen-md-max) {
+@media (min-width: @screen-md-min) {
 
 	.navbar-default .logo, .navbar-default .logo:hover {
 		background: url("/images/global/logo/logo-sm.png") no-repeat;
@@ -36,7 +36,7 @@
 	}
  }
 
-@media (max-width: @screen-sm-max) {
+@media (min-width: @screen-sm-min) {
 
 	.navbar-default .logo, .navbar-default .logo:hover {
 		margin-left: 15px;
@@ -147,6 +147,9 @@
 }
 
 
+
+
+
 // media navigation alignment tweaks //
 @media (min-width: @screen-lg-min) {
 
@@ -155,7 +158,7 @@
 	}
  }
 
- @media (max-width: @screen-md-max) {
+ @media (min-width: @screen-md-min) {
 
 	.makie-nav-align {
 		margin-left: 20px;
@@ -190,7 +193,7 @@
 }
 
 
-@media (max-width: @screen-sm-max) {
+@media (min-width: @screen-sm-min) {
 
 	.makie-nav-align, .nav-accountlinks-align {
 		margin: 0;
@@ -206,6 +209,11 @@
 }
 
 
+@media (min-width: @screen-sm-min)
+.navbar-header {
+float: none;
+}
+
 
 // FOOTER //
 span.palegray {
@@ -217,7 +225,7 @@ p.footer {
 }
 
 
-@media (max-width: @screen-sm-max) {
+@media (min-width: @screen-sm-min) {
 
 	.h5footer {
 		font-size: @font-size-h6;
@@ -229,7 +237,7 @@ p.footer {
 		margin-top: 60px;
 }
 
-@media (max-width: @screen-sm-max) {
+@media (min-width: @screen-sm-min) {
 
 	.section-drop {
 		margin-top: 30px;
@@ -284,7 +292,7 @@ p.footer {
 
 
 // TESTIMONIALS //
-@media (max-width: @screen-sm-max) {
+@media (min-width: @screen-sm-min) {
 
 	.testimonials {
 		margin-top: 40px;
